--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,200 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 
-
+body,
+html {
+  width: 100vw;
+  height: 100vh;
+}
 .container {
   margin-bottom: 30%;
 }
+/* CSS for Navbar */
 .navbar {
-
   position: sticky;
   top: 0px;
 }
-.profile-picture {
-  width:300px;
-  height:400px;
-  border-radius: 100%;
+.navbar-brand {
+  animation: slideIn 1s ease forwards;
 }
+
+.nav-item {
+  opacity: 0;
+  animation: slideTop 1s ease forwards;
+  animation-delay: calc(0.2s * var(--i));
+}
+
+/* CSS for Loading page */
+.container.loading {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  max-width: unset;
+}
+
+.loading-main {
+  height: 90%;
+  background-color: #ddd;
+  background-image: url(../public/imgs/snake.jpg);
+  background-size: 200px 200px;
+  animation:shrink 2s ease forwards;
+}
+
+/* .loading-main::before {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+
+  width: 30%;
+  height: 90%;
+  background-color: red;
+  transform: translate(85%, -60%);
+} */
+
+.srollbar-loading {
+  width: 100%;
+}
+.fa-chevron-down {
+  display: block;
+  width: 100%;
+  color: bisque;
+  animation: opacityChanged 1.5s infinite;
+  animation-delay: calc(0.2s * var(--i));
+}
+
+/* CSS For Profile Picture */
+.photo-card {
+  transition: all 0.5s;
+}
+
+/* .photo-card-shine {
+  width: 100%;
+    height: 100%;
+
+  border-radius: 100%;
+  border:2px solid red;
+  z-index:1000;
+
+}
+.photo-card-shadow {
+  width:100%;
+  height:100%;
+  border-radius: 100%;
+  box-shadow: 0px 0px 20px 0px;
+} */
+.photo-card-photo {
+  width: 300px;
+  height: 400px;
+  border-radius: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  z-index: -100;
+  box-shadow: 20px 30px 20px 5px rgba(127, 129, 115, 0.6);
+  animation: zoomIn 2s ease forwards;
+}
+/* CSS for internship Page */
 .timeline {
   width: 10px;
   height: 100%;
   background-color: black;
+}
+/* Project Page */
+.project {
+  padding-bottom: 20px;
+}
+.project-picture-section {
+  position: relative;
+}
+.project-img {
+  opacity: 1;
+  display: block;
+  width: 80%;
+  height: 100%;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+.project-title {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+.project-picture-section:hover .project-img {
+  opacity: 0.3;
+}
+.project-picture-section:hover .project-title {
+  background-color: #ddd;
+  opacity: 1;
+}
+
+@keyframes opacityChanged {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideTop {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
+@keyframes shrink {
+  0% {
+   border-radius: 0%;
+  }
+
+  100% {
+    border-top-left-radius: 100% 50%;
+  border-top-right-radius: 100% 50%;
+  border-bottom-left-radius: 100% 50%;
+  border-bottom-right-radius: 100% 50%;
+  }
+}
+
+@keyframes zoomIn {
+   0% {
+   transform: scale(0);
+    opacity: 0;
+  }
+
+  100% {
+     transform: scale(100%);
+     opacity: 1;
+  }
+  
+}
+@keyframes Text {
+  
 }
