--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,9 @@ html {
 .container {
   margin-bottom: 30%;
 }
+
 /* CSS for Navbar */
-.navbar {
+.menu {
   position: sticky;
   top: 0px;
 }
@@ -20,13 +21,18 @@ html {
   animation: slideIn 1s ease forwards;
 }
 
-.nav-item {
+.nav-item-animation {
   opacity: 0;
   animation: slideTop 1s ease forwards;
   animation-delay: calc(0.2s * var(--i));
 }
 
-/* CSS for Loading page */
+/* CSS for Main page */
+#id {
+  height: 100vh;
+
+}
+
 .container.loading {
   border: 0;
   margin: 0;
@@ -34,27 +40,58 @@ html {
   max-width: unset;
 }
 
+.greeting {
+  position: relative;
+  color: white;
+  font-weight: 900;
+  font-size: 108px;
+}
+.greeting::before {
+  content: "Welcome";
+  position: absolute;
+  width: 2px;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: TextSwipe 2s linear forwards;
+}
+.loading-background{
+   position: relative;
+   background-image: url(../public/imgs/IMG_8678.png);
+   /* background-color: rosybrown; */
+   background-size: cover;
+   background-position: 50% 50%;
+  height: 80%;
+  font: 900 20rem "";
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+  text-align: center;
+  overflow-y:scroll;
+  animation: shrink 2s ease forwards;
+
+}
+.loading-background::before{
+  content:"";
+  background-image: inherit;
+   /* background-color: rosybrown; */
+   background-size: cover;
+   background-position: 50% 50%;
+   position: absolute;
+   top:0;
+   left:0;
+   bottom: 0;
+   right:0;
+   z-index:-100;
+
+}
 .loading-main {
-  height: 90%;
-  background-color: #ddd;
-  background-image: url(../public/imgs/snake.jpg);
-  background-size: 200px 200px;
-  animation:shrink 2s ease forwards;
+  position:absolute;
+
+
 }
 
-/* .loading-main::before {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-
-  width: 30%;
-  height: 90%;
-  background-color: red;
-  transform: translate(85%, -60%);
-} */
-
 .srollbar-loading {
+  height: 5%;
   width: 100%;
 }
 .fa-chevron-down {
@@ -65,26 +102,15 @@ html {
   animation-delay: calc(0.2s * var(--i));
 }
 
-/* CSS For Profile Picture */
+/* CSS FOR Introduction PAGE */
+.contact-animation {
+  opacity: 0;
+  animation: slideBottom 1s ease forwards;
+  animation-delay: calc(0.2s * var(--i));
+}
 .photo-card {
   transition: all 0.5s;
 }
-
-/* .photo-card-shine {
-  width: 100%;
-    height: 100%;
-
-  border-radius: 100%;
-  border:2px solid red;
-  z-index:1000;
-
-}
-.photo-card-shadow {
-  width:100%;
-  height:100%;
-  border-radius: 100%;
-  box-shadow: 0px 0px 20px 0px;
-} */
 .photo-card-photo {
   width: 300px;
   height: 400px;
@@ -93,42 +119,121 @@ html {
   transform-style: preserve-3d;
   z-index: -100;
   box-shadow: 20px 30px 20px 5px rgba(127, 129, 115, 0.6);
-  animation: zoomIn 2s ease forwards;
+ 
+
 }
+.photo-card-photo-animation {
+  animation: zoomIn 2s ease forwards,MoveUpAndDown 2s ease infinite;
+   animation-delay: 0s, 3s;
+}
+
+/* Project Page */
+#projects > row {
+  margin-top: 10%;
+}
+.project {
+  padding-bottom: 20px;
+}
+
+.project-picture-section {
+  position: relative;
+  width: 600px;
+  height: 350px;
+  transition: 0.5s;
+  border:1px solid #ddd;
+  overflow: auto;
+}
+
+.project-picture-section .circle {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+.project-picture-section .circle::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: aquamarine;
+  border-radius: 20px;
+  clip-path: circle(150px at 100px 150px);
+  transition: 1s;
+}
+.project-picture-section:hover .circle::before {
+  clip-path: circle(500px at center);
+  background-color: cadetblue;
+}
+
+.project-picture-section .project-img {
+  position: absolute;
+  width: 180px;
+  height: 240px;
+  transform: translate(-10%, -50%);
+  overflow: hidden;
+}
+.project-picture-section .project-img-hover {
+  display: none;
+  transition: 1s;
+}
+.project-picture-section:hover .project-img{
+  display: none;
+}
+.project-picture-section:hover .project-img-hover{
+  display: block;
+  position: absolute;
+  width: 180px;
+  height: 240px;
+  /* transform: translate(300%, -40%) rotateZ(30deg);; */
+  transform: rotateX(30deg) rotateY(-20deg);
+  overflow: hidden;
+
+}
+.project-picture-section .content{
+  position: relative;
+
+
+}
+.project-picture-section .content .content-image{
+  display: none;
+}
+.project-picture-section:hover .content .content-image{
+  display: block;
+}
+.project-picture-section .content .sample-img {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+.project-link {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left:75%;
+    transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: 0.5s ease;
+}
+.project-picture-section:hover .sample-img {
+  opacity: 0.3;
+}
+.project-picture-section:hover .project-link{
+  background-color: #ddd;
+  opacity: 1;
+} 
+
 /* CSS for internship Page */
 .timeline {
   width: 10px;
   height: 100%;
   background-color: black;
-}
-/* Project Page */
-.project {
-  padding-bottom: 20px;
-}
-.project-picture-section {
-  position: relative;
-}
-.project-img {
-  opacity: 1;
-  display: block;
-  width: 80%;
-  height: 100%;
-  transition: 0.5s ease;
-  backface-visibility: hidden;
-}
-.project-title {
-  position: absolute;
-  top: 50%;
-  left: 20%;
-  opacity: 0;
-  transition: 0.5s ease;
-}
-.project-picture-section:hover .project-img {
-  opacity: 0.3;
-}
-.project-picture-section:hover .project-title {
-  background-color: #ddd;
-  opacity: 1;
 }
 
 @keyframes opacityChanged {
@@ -158,6 +263,16 @@ html {
   }
 }
 
+@keyframes slideBottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 @keyframes slideTop {
   0% {
     transform: translateY(-100%);
@@ -169,32 +284,56 @@ html {
   }
 }
 
-
 @keyframes shrink {
   0% {
-   border-radius: 0%;
+    border-radius: 0%;
   }
 
   100% {
     border-top-left-radius: 100% 50%;
-  border-top-right-radius: 100% 50%;
-  border-bottom-left-radius: 100% 50%;
-  border-bottom-right-radius: 100% 50%;
+    border-top-right-radius: 100% 50%;
+    border-bottom-left-radius: 100% 50%;
+    border-bottom-right-radius: 100% 50%;
   }
 }
 
 @keyframes zoomIn {
-   0% {
-   transform: scale(0);
+  0% {
+    transform: scale(0);
     opacity: 0;
   }
 
   100% {
-     transform: scale(100%);
-     opacity: 1;
+    transform: scale(100%);
+    opacity: 1;
   }
-  
 }
-@keyframes Text {
-  
+@keyframes TextSwipe {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 500px;
+  }
+}
+
+@keyframes ShiftToTopRight{
+   0% {
+    left: 0;
+  }
+  50% {
+    left: 100%;
+  }
+}
+
+@keyframes MoveUpAndDown{
+   0% {
+    transform: translateY(-2%);
+  }
+  50% {
+     transform: translateY(2%);
+  }
+  100% {
+     transform: translateY(-2%);
+  }
 }
