--- a/src/App.css
+++ b/src/App.css
@@ -9,33 +9,124 @@ html {
   width: 100vw;
   height: 100vh;
 }
+
+#root {
+  background-color: #fbf37a;
+}
 .container {
-  margin-bottom: 30%;
+  margin-bottom: 10%;
 }
 .display-1 {
   font-family: "Pacifico", cursive;
 }
 
 .section-title {
-  background-color: burlywood;
   border-radius: 40%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
 }
 .section-title-animation {
-   animation: slideTop 1s ease forwards;
+  animation: slideTop 1s ease forwards;
 }
 
 /* CSS for Navbar */
+.nav-name,
+.cv-btn {
+  position: relative;
+}
+.cv-btn {
+  height: fit-content;
+  width: fit-content;
+  border-radius: 20px;
+  border: 2px orange solid;
+}
+
+.nav-name.name-click-animation::before,
+.nav-name.name-click-animation::after,
+.cv-btn::before,
+.cv-btn::after {
+  content: "";
+  position: absolute;
+  width: 150%;
+  height: 100%;
+  left: -25%;
+  background-repeat: no-repeat;
+  /* left:50%;
+  transform: translateX(-50%); */
+}
+
+.nav-name.name-click-animation::before,
+.cv-btn:hover::before {
+  top: -70%;
+  background-image: radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, transparent 20%, orange 20%, transparent 30%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, transparent 10%, orange 15%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%);
+  background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
+    10% 10%, 18% 18%;
+  animation: topBobbles 0.6s ease-in-out infinite;
+}
+
+.nav-name.name-click-animation::after,
+.cv-btn:hover::after {
+  bottom: -70%;
+  background-image: radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, transparent 10%, orange 15%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%),
+    radial-gradient(circle, orange 20%, transparent 20%);
+  background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
+  animation: bottomBubbles ease-in-out 0.6s infinite;
+}
+.cv-btn:hover::before {
+  animation: topBobbles 1.2s ease-in-out infinite;
+}
+.cv-btn:hover::after {
+  animation: bottomBubbles 1.2s ease-in-out infinite;
+}
+
 .menu {
   position: sticky;
   top: 0px;
   z-index: 10000;
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  background-color: #fbf37a;
+}
+.menu .navbar {
+  padding: 10px 20px;
+  background-color: #fbf37a;
 }
 .navbar-brand {
   animation: slideIn 1s ease forwards;
 }
-
+.nav-item {
+  transition: transform 250ms ease-in-out;
+}
+.nav-item::after {
+  display: block;
+  content: "";
+  border-bottom: solid 3px orange;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+}
+.nav-item:hover {
+  transform: translate(0%, -10%);
+}
+.nav-item:active {
+  transform: scale(0.9);
+}
+.nav-item:hover::after {
+  transform: scaleX(1);
+}
 .nav-item-animation {
   opacity: 0;
   animation: slideTop 1s ease forwards;
@@ -53,43 +144,124 @@ html {
   padding: 0;
   max-width: unset;
 }
-
 .loading-background {
   position: relative;
-  /* background-image: url(../public/imgs/IMG_8678.png); */
-  background-color: thistle;
-  background-size: cover;
-  background-position: 50% 50%;
-  height: 80%;
-  font: 900 3rem "";
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  position: relative;
-  text-align: center;
-  overflow-y: scroll;
-  animation: shrink 2s ease forwards;
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-color: orange;
+  background-image: radial-gradient(
+      closest-side,
+      rgba(253, 160, 133, 1),
+      rgba(246, 211, 101, 0)
+    ),
+    radial-gradient(closest-side, rgba(248, 54, 0, 1), rgba(249, 212, 35, 0)),
+    radial-gradient(closest-side, rgba(255, 88, 88, 1), rgba(240, 152, 25, 0)),
+    radial-gradient(
+      closest-side,
+      rgba(255, 195, 160, 1),
+      rgba(255, 175, 189, 0)
+    ),
+    radial-gradient(
+      closest-side,
+      rgba(221, 214, 243, 1),
+      rgba(250, 172, 168, 0)
+    );
+  background-size: 130vmax 130vmax, 80vmax 80vmax, 90vmax 90vmax,
+    110vmax 110vmax, 90vmax 90vmax;
+  background-position: -80vmax -80vmax, 60vmax -30vmax, 10vmax 10vmax,
+    -10vmax -30vmax, 50vmax 50vmax;
+  animation: movement 5s linear infinite;
 }
-.loading-background::before {
+
+.loading-background::after {
   content: "";
-  /* background-image: inherit; */
-   background-color: thistle;
-  background-size: cover;
-  background-position: 50% 50%;
-  position: absolute;
+  display: block;
+  position: fixed;
+  width: 00%;
+  height: 100%;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  overflow-y: scroll;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
+.row.float-end {
+  width: fit-content;
+  margin: 0;
+  padding: 0;
+  padding-top: 30px;
+  margin-left: 80%;
+}
+.fa-bars,
+.fa-xmark {
+  font-size: 2em;
+  color: transparent;
+  text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6);
+}
+.fa-xmark {
+  display: block;
+}
+
+
+.show-menu {
+  display: block;
+  width:200px;
+  margin-right: 10px;
+}
+.no-menu {
+  display: none;
+  width: fit-content;
+  height:fit-content;
+
+}
+
+.sidenav{
+  height: 100%;
+  position: fixed;
+  z-index: 100;
+  background-color: transparent;
+  overflow-x: hidden;
+  transform: translateX(100%);
+  transition: 0.5s;
+  padding-top: 60px;
+  width:500px;
+}
+
+.sidenav a {
+  text-decoration: none;
+  color: transparent;
+  font-size: 5em;
+  font-weight: 900;
+  text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6),
+    0px 4px 4px rgba(0, 0, 0, 0.05);
+
+}
+.welcome {
+  display: block;
+  font-family: "Pacifico", cursive;
+  padding-top: 30vh;
+  color: transparent;
+  height: 80%;
+  font-size: 10em;
+  font-weight: 900;
+  text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6),
+    0px 4px 4px rgba(0, 0, 0, 0.05);
+  animation: zoomIn 2s ease forwards;
+  /* animation: TextSwipe 2s linear forwards; */
+}
+
 .srollbar-loading {
+  position: absolute;
   height: 5%;
   width: 100%;
+  /* z-index: 1000; */
 }
 .fa-chevron-down {
   display: block;
   width: 100%;
-  color: bisque;
+  color: transparent;
+  text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6),
+    0px 4px 4px rgba(0, 0, 0, 0.05);
   animation: opacityChanged 1.5s infinite;
   animation-delay: calc(0.2s * var(--i));
 }
@@ -134,7 +306,7 @@ html {
 
 /* Project Page */
 
-.project {
+.projects {
   padding-bottom: 20px;
 }
 .project-leftSection-animation {
@@ -150,7 +322,6 @@ html {
   height: 350px;
   border-radius: 20px;
   transition: 0.5s;
-  /* border: 2px solid #ddd; */
 }
 .project-picture-section .preview-content {
   z-index: 100;
@@ -184,7 +355,7 @@ html {
   transition: 1s;
 }
 .project-picture-section:hover .circle::before {
-  clip-path: circle(500px at center);
+  clip-path: circle(1000px at center);
   background-color: orange;
 }
 .project-img {
@@ -200,7 +371,7 @@ html {
 }
 .project-picture-section .content {
   position: relative;
-  width: 50%;
+  width: 60%;
   transition: 0.5s;
   visibility: hidden;
   opacity: 0;
@@ -210,15 +381,19 @@ html {
   opacity: 1;
 }
 
+.project-picture-section .content .btn {
+  display: block;
+  background-color: bisque;
+  height: fit-content;
+}
+
 /* CSS for experience Page */
 .timeline {
-
   position: relative;
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  margin-top:30px;
-  background-color: white;
+  margin-top: 30px;
 }
 
 .timeline::after {
@@ -236,18 +411,17 @@ html {
   /* border: 2px solid #ddd; */
   position: relative;
   opacity: 0;
-
 }
 .single-experience-animation {
-   animation: zoomIn 2s ease forwards;
+  animation: zoomIn 2s ease forwards;
   animation-delay: calc(0.2s * var(--i));
-  
 }
 
 .single-experience .content {
   width: 50%;
   height: 200px;
   border: 2px solid #ddd;
+  background-color: white;
 }
 .single-experience .content .experience-time {
   font-size: 1.5rem;
@@ -258,16 +432,14 @@ html {
   position: relative;
   transform: translate(105%, 0);
 }
-.left.single-experience .content .experience-time{
+.left.single-experience .content .experience-time {
   position: relative;
   transform: translate(33%, 0);
 }
 
-.right.single-experience .content .experience-time{
-   position: relative;
+.right.single-experience .content .experience-time {
+  position: relative;
   transform: translate(-33%, 0);
-
-
 }
 
 @keyframes opacityChanged {
@@ -381,6 +553,73 @@ html {
   }
 }
 
-@keyframes identifier {
-  
+@keyframes borderBottom {
+  0% {
+    border-bottom: none;
+  }
+
+  100% {
+    border-bottom: 2px solid #ddd;
+  }
+}
+
+@keyframes topBobbles {
+  0% {
+    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%,
+      40% 90%, 55% 90%, 70% 90%;
+  }
+  50% {
+    background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%,
+      50% 50%, 65% 20%, 90% 30%;
+  }
+  100% {
+    background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%,
+      50% 40%, 65% 10%, 90% 20%;
+    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+  }
+}
+
+@keyframes bottomBubbles {
+  0% {
+    background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%,
+      70% -10%, 70% 0%;
+  }
+  50% {
+    background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%,
+      105% 0%;
+  }
+  100% {
+    background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%,
+      110% 10%;
+    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+  }
+}
+
+@keyframes movement {
+  0%,
+  100% {
+    background-size: 130vmax 130vmax, 80vmax 80vmax, 90vmax 90vmax,
+      110vmax 110vmax, 90vmax 90vmax;
+    background-position: -80vmax -80vmax, 60vmax -30vmax, 10vmax 10vmax,
+      -10vmax -30vmax, 50vmax 50vmax;
+  }
+
+  25% {
+    background-size: 120vmax 120vmax, 90vmax 90vmax, 80vmax 80vmax,
+      120vmax 110vmax, 80vmax 80vmax;
+    background-position: -50vmax -70vmax, 50vmax -40vmax, 20vmax 30vmax,
+      -20vmax -40vmax, 60vmax 60vmax;
+  }
+  50% {
+    background-size: 80vmax 80vmax, 110vmax 110vmax, 70vmax 70vmax,
+      110vmax 130vmax, 60vmax 30vmax;
+    background-position: -60vmax -60vmax, 70vmax -30vmax, 30vmax 40vmax,
+      -30vmax -20vmax, 550vmax 55vmax;
+  }
+  75% {
+    background-size: 110vmax 110vmax, 80vmax 80vmax, 75vmax 75vmax,
+      120vmax 110vmax, 80vmax 80vmax;
+    background-position: -50vmax -70vmax, 50vmax -40vmax, 20vmax 30vmax,
+      -20vmax -40vmax, 60vmax 60vmax;
+  }
 }
