--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,51 @@ html {
   height: 100vh;
 }
 
-#root {
+/* #root {
   background-color: #fbf37a;
+} */
+
+.App {
+  position: relative;
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-color: rgb(252, 194, 133);
+  background-image: radial-gradient(
+      closest-side,
+      rgba(253, 160, 133, 1),
+      rgba(246, 211, 101, 0)
+    ),
+    radial-gradient(closest-side, rgba(248, 54, 0, 1), rgba(249, 212, 35, 0)),
+    radial-gradient(closest-side, rgba(255, 88, 88, 1), rgba(240, 152, 25, 0)),
+    radial-gradient(
+      closest-side,
+      rgba(255, 195, 160, 1),
+      rgba(255, 175, 189, 0)
+    ),
+    radial-gradient(
+      closest-side,
+      rgba(221, 214, 243, 1),
+      rgba(250, 172, 168, 0)
+    );
+  background-size: 130vmax 130vmax, 80vmax 80vmax, 90vmax 90vmax,
+    110vmax 110vmax, 90vmax 90vmax;
+  background-position: -80vmax -80vmax, 60vmax -30vmax, 10vmax 10vmax,
+    -10vmax -30vmax, 50vmax 50vmax;
+  animation: movement 5s linear infinite;
 }
+
+/* .App::after {
+  content: "";
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+} */
 .container {
   margin-bottom: 10%;
 }
@@ -99,11 +141,11 @@ html {
   padding: 0;
   margin: 0;
   width: 100vw;
-  background-color: #fbf37a;
+  /* background-color: #fbf37a; */
 }
 .menu .navbar {
   padding: 10px 20px;
-  background-color: #fbf37a;
+  /* background-color: #fbf37a; */
 }
 .navbar-brand {
   animation: slideIn 1s ease forwards;
@@ -148,43 +190,8 @@ html {
   position: relative;
   height: 100%;
   margin: 0;
-  background-repeat: no-repeat;
-  background-color: orange;
-  background-image: radial-gradient(
-      closest-side,
-      rgba(253, 160, 133, 1),
-      rgba(246, 211, 101, 0)
-    ),
-    radial-gradient(closest-side, rgba(248, 54, 0, 1), rgba(249, 212, 35, 0)),
-    radial-gradient(closest-side, rgba(255, 88, 88, 1), rgba(240, 152, 25, 0)),
-    radial-gradient(
-      closest-side,
-      rgba(255, 195, 160, 1),
-      rgba(255, 175, 189, 0)
-    ),
-    radial-gradient(
-      closest-side,
-      rgba(221, 214, 243, 1),
-      rgba(250, 172, 168, 0)
-    );
-  background-size: 130vmax 130vmax, 80vmax 80vmax, 90vmax 90vmax,
-    110vmax 110vmax, 90vmax 90vmax;
-  background-position: -80vmax -80vmax, 60vmax -30vmax, 10vmax 10vmax,
-    -10vmax -30vmax, 50vmax 50vmax;
-  animation: movement 5s linear infinite;
 }
 
-.loading-background::after {
-  content: "";
-  display: block;
-  position: fixed;
-  width: 00%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-}
 .row.float-end {
   width: fit-content;
   margin: 0;
@@ -199,23 +206,21 @@ html {
   text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6);
 }
 .fa-xmark {
-  width:fit-content
+  width: fit-content;
 }
-
 
 .show-menu {
   display: block;
-  width:200px;
+  width: 200px;
   margin-right: 10px;
 }
 .no-menu {
   display: none;
   width: fit-content;
-  height:fit-content;
-
+  height: fit-content;
 }
 
-.sidenav{
+.sidenav {
   height: 100%;
   position: fixed;
   z-index: 100;
@@ -224,14 +229,12 @@ html {
   transform: translateX(100%);
   transition: 0.5s;
   padding-top: 60px;
-  width:500px;
+  width: 500px;
 }
 
-
-.row.nav{
+.row.nav {
   margin-left: 10px;
 }
-
 
 .sidenav a {
   text-decoration: none;
@@ -240,7 +243,6 @@ html {
   font-weight: 900;
   text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6),
     0px 4px 4px rgba(0, 0, 0, 0.05);
-
 }
 .welcome {
   display: block;
