--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,8 @@ html {
 }
 
 .section-title {
+  height:fit-content;
+  margin-bottom: 30px;
   border-radius: 40%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
@@ -477,8 +479,18 @@ html {
   position: relative;
   transform: translate(-30%, 0);
 }
+/* CSS for Skills Section */
+.portrait{
+  width:200px;
+  height:200px;
+}
+.learning-journey p.col span{
+   font-family: "Pacifico", cursive;
+   font-size:2em;
+   font-weight: 500;
+}
 
-/* CSS for skills Section */
+/* CSS for Footer Section */
 
 #footer {
   width: 100%;
