--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ html {
 }
 
 .section-title {
-  height:fit-content;
+  height: fit-content;
   margin-bottom: 30px;
   border-radius: 40%;
   transition: transform 0.6s;
@@ -77,7 +77,9 @@ html {
 .nav-name.name-click-animation::before,
 .nav-name.name-click-animation::after,
 .cv-btn::before,
-.cv-btn::after {
+.cv-btn::after,
+.row.btn::before,
+.row.btn::after {
   content: "";
   position: absolute;
   width: 150%;
@@ -89,7 +91,8 @@ html {
 }
 
 .nav-name.name-click-animation::before,
-.cv-btn:hover::before {
+.cv-btn:hover::before,
+.row.btn::before {
   top: -70%;
   background-image: radial-gradient(circle, orange 20%, transparent 20%),
     radial-gradient(circle, transparent 20%, orange 20%, transparent 30%),
@@ -106,7 +109,8 @@ html {
 }
 
 .nav-name.name-click-animation::after,
-.cv-btn:hover::after {
+.cv-btn:hover::after,
+.row.btn::after {
   bottom: -70%;
   background-image: radial-gradient(circle, orange 20%, transparent 20%),
     radial-gradient(circle, orange 20%, transparent 20%),
@@ -121,8 +125,14 @@ html {
 .cv-btn:hover::before {
   animation: topBobbles 1.2s ease-in-out infinite;
 }
+.row.btn::before {
+  animation: topBobbles 1.2s ease forwards;
+}
 .cv-btn:hover::after {
   animation: bottomBubbles 1.2s ease-in-out infinite;
+}
+.row.btn::after {
+  animation: bottomBubbles 1.2s ease forwards;
 }
 
 .menu {
@@ -420,7 +430,7 @@ html {
   content: "";
   position: absolute;
   width: 6px;
-  height:100%;
+  height: 100%;
   background-color: orange;
   top: 0;
   bottom: 0;
@@ -435,7 +445,7 @@ html {
   height: fit-content;
 }
 .single-experience-animation {
-  animation: zoomIn 2s ease forwards;
+  animation: zoomIn 1s ease forwards;
   animation-delay: calc(0.2s * var(--i));
 }
 
@@ -480,14 +490,122 @@ html {
   transform: translate(-30%, 0);
 }
 /* CSS for Skills Section */
-.portrait{
-  width:200px;
-  height:200px;
+.portrait {
+  width: 200px;
+  height: 200px;
 }
-.learning-journey p.col span{
-   font-family: "Pacifico", cursive;
-   font-size:2em;
-   font-weight: 500;
+.learning-journey p.col span {
+  font-family: "Pacifico", cursive;
+  font-size: 2em;
+  font-weight: 500;
+}
+
+.single-skill-card {
+  position: relative;
+  width: 90px;
+  height: 400px;
+  overflow: hidden;
+  margin-left: 12px;
+  margin-bottom: 10px;
+}
+.single-skill-card:hover {
+  overflow: initial;
+}
+
+.skill-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s cubic-bezier(0.164, 0.84, 0.44, 1);
+  overflow: hidden;
+  border-radius: 10px;
+  background-color: transparent
+}
+
+.skill-title {
+  position: relative;
+  font-size: 6rem;
+  font-weight: 900;
+  transform: translate(-20%, 120%) rotate(-90deg);
+  opacity: 0.3;
+}
+.skill-logo {
+  position: absolute;
+  display: block;
+  bottom: 1%;
+  transition: all 0.5s;
+}
+
+.skill-hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+}
+.skill-hover .skill-title {
+  opacity: 0;
+}
+
+.single-skill-card:hover .skill-box > .skill-title {
+  opacity: 0;
+}
+.single-skill-card:hover > .skill-box {
+  transform: scaleY(1.5);
+}
+.single-skill-card:nth-child(1):hover > .skill-box {
+  background-color: #5382a1;
+}
+.single-skill-card:nth-child(2):hover > .skill-box {
+  background-color: #f0db4f;
+}
+.single-skill-card:nth-child(3):hover > .skill-box {
+  background-color: #ff7262;
+}
+.single-skill-card:nth-child(4):hover > .skill-box {
+  background-color: #61dbfb;
+}
+.single-skill-card:nth-child(5):hover > .skill-box {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+.single-skill-card:nth-child(6):hover > .skill-box {
+  background-color: #764abc;
+}
+.single-skill-card:nth-child(7):hover > .skill-box {
+  background-color: #68a063;
+}
+.single-skill-card:nth-child(8):hover > .skill-box {
+  background-color: #ddd;
+}
+.single-skill-card:nth-child(9):hover > .skill-box {
+  background-color: #00684a;
+}
+.single-skill-card:nth-child(10):hover > .skill-box {
+  background-color: #00758f;
+}
+.single-skill-card:nth-child(11):hover > .skill-box {
+  background-color: rgb(249, 155, 31);
+}
+.single-skill-card:nth-child(12):hover > .skill-box {
+  background-color: #b4d5de;
+}
+
+.single-skill-card:hover > .skill-hover .skill-title {
+  position: relative;
+  opacity: 0.8;
+  font-size: 8rem;
+  font-weight: 900;
+  transform: translate(-50%, 100%) rotate(-90deg);
+}
+
+.single-skill-card:nth-child(2):hover > .skill-hover .skill-title,
+.single-skill-card:nth-child(9):hover > .skill-hover .skill-title {
+  font-size: 5rem;
+  transform: translate(-50%, 200%) rotate(-90deg);
+}
+.single-skill-card:hover .skill-logo {
+  opacity: 0;
 }
 
 /* CSS for Footer Section */
@@ -512,9 +630,9 @@ html {
     rgba(249, 212, 35, 0)
   );
   border-radius: 55%;
-  transform: translate(-50%, 200%) rotateZ(0);
+  transform: translate(-50%, 100%) rotateZ(0);
   top: 15vh;
-  animation: rotate 10s linear infinite;
+  animation: rotate 5s linear infinite;
   margin-top: 80%;
 }
 #footer::after {
@@ -526,6 +644,15 @@ html {
   );
 
   border-radius: 57%;
+}
+.footer-content {
+  width: 300px;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.contact .col i {
+  color: black;
 }
 
 @keyframes rotate {
