--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,30 @@ html {
   height: 100vh;
 }
 
-/* #root {
-overflow-x: hidden;} */
+:root,
+:root.orange {
+  --bg-color: rgb(252, 194, 133);
+  --dec-color: orange;
+}
+:root.purple {
+  --bg-color: rgb(197, 97, 197);
+  --dec-color: rgb(148, 35, 148);
+}
+:root.green {
+  --bg-color: #96e6a1;
+  --dec-color: #9afc79;
+}
+:root.blue {
+  --bg-color: #c2e9fb;
+  --dec-color: #a1c4fd;
+}
 
 .App {
   position: relative;
   height: 100%;
   margin: 0;
   background-repeat: no-repeat;
-  background-color: rgb(252, 194, 133);
+  background-color: var(--bg-color);
   background-image: radial-gradient(
       closest-side,
       rgba(253, 160, 133, 1),
@@ -74,7 +89,7 @@ overflow-x: hidden;} */
   height: fit-content;
   width: fit-content;
   border-radius: 20px;
-  border: 2px orange solid;
+  border: 2px var(--dec-color) solid;
 }
 
 .nav-name.name-click-animation::before,
@@ -89,23 +104,35 @@ overflow-x: hidden;} */
   height: 100%;
   left: -25%;
   background-repeat: no-repeat;
-  /* left:50%;
-  transform: translateX(-50%); */
 }
 
 .nav-name.name-click-animation::before,
 .cv-btn:hover::before,
 .row.btn::before {
   top: -70%;
-  background-image: radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, transparent 20%, orange 20%, transparent 30%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, transparent 10%, orange 15%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%);
+  background-image: radial-gradient(
+      circle,
+      var(--dec-color) 20%,
+      transparent 20%
+    ),
+    radial-gradient(
+      circle,
+      transparent 20%,
+      var(--dec-color) 20%,
+      transparent 30%
+    ),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(
+      circle,
+      transparent 10%,
+      var(--dec-color) 15%,
+      transparent 20%
+    ),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%);
   background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
     10% 10%, 18% 18%;
   animation: topBobbles 0.6s ease-in-out infinite;
@@ -115,13 +142,22 @@ overflow-x: hidden;} */
 .cv-btn:hover::after,
 .row.btn::after {
   bottom: -70%;
-  background-image: radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, transparent 10%, orange 15%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%),
-    radial-gradient(circle, orange 20%, transparent 20%);
+  background-image: radial-gradient(
+      circle,
+      var(--dec-color) 20%,
+      transparent 20%
+    ),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(
+      circle,
+      transparent 10%,
+      var(--dec-color) 15%,
+      transparent 20%
+    ),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%),
+    radial-gradient(circle, var(--dec-color) 20%, transparent 20%);
   background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
   animation: bottomBubbles ease-in-out 0.6s infinite;
 }
@@ -148,7 +184,7 @@ overflow-x: hidden;} */
 }
 .menu .navbar {
   padding: 10px 20px;
-  background-color: rgb(252, 194, 133) !important;
+  background-color: var(--bg-color) !important;
 }
 .navbar-brand {
   animation: slideIn 1s ease forwards;
@@ -159,7 +195,7 @@ overflow-x: hidden;} */
 .nav-item::after {
   display: block;
   content: "";
-  border-bottom: solid 3px orange;
+  border-bottom: solid 3px var(--dec-color);
   transform: scaleX(0);
   transition: transform 250ms ease-in-out;
 }
@@ -227,22 +263,7 @@ overflow-x: hidden;} */
   width: 30px;
   height: 8px;
   transition: 0.5s;
-}
-.diy-btn:hover .btn-line-long {
-  opacity: 0;
-}
-.diy-btn:hover .btn-line-short:nth-child(1) {
-  width: 50px;
-  transform: rotate(45deg);
-  transform-origin: left;
-  transition: 0.5s;
-}
-
-.diy-btn:hover .align-self-end {
-  width: 50px;
-  transform: rotate(-45deg);
-  transform-origin: left;
-  transition: 0.5s;
+  animation: MenuMove 1s linear forwards;
 }
 
 .sidenav {
@@ -263,8 +284,6 @@ overflow-x: hidden;} */
   text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6),
     0px 4px 4px rgba(0, 0, 0, 0.05);
   border-radius: 20px;
-  animation: slideLeftIn 2s ease forwards;
-   animation-delay: calc(0.2s * var(--i));
   transition: all 2s;
 }
 
@@ -279,16 +298,20 @@ overflow-x: hidden;} */
 
 .welcome {
   display: block;
-  font-family: "Pacifico", cursive;
-  padding-top: 30vh;
   color: transparent;
-  height: 80%;
-  font-size: 10em;
+  font-size: 4em;
   font-weight: 900;
   text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6),
     0px 4px 4px rgba(0, 0, 0, 0.05);
-  animation: zoomIn 2s ease forwards;
-  z-index: -100;
+  opacity: 0;
+}
+.welcome-1 {
+  animation: zoomIn 2s ease forwards, welcome-1 2s ease forwards;
+  animation-delay: 0s, 2s;
+}
+.welcome-2 {
+  animation: zoomIn 2s ease forwards, welcome-2 1s ease forwards;
+  animation-delay: 3s, 5s;
 }
 
 .srollbar-loading {
@@ -399,14 +422,14 @@ overflow-x: hidden;} */
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: orange;
+  background-color: var(--dec-color);
   border-radius: 20px;
   clip-path: circle(150px at center);
   transition: 1s;
 }
 .project-picture-section:hover .circle::before {
   clip-path: circle(1000px at center);
-  background-color: orange;
+  background-color: var(--dec-color);
 }
 .project-img {
   position: absolute;
@@ -452,7 +475,7 @@ overflow-x: hidden;} */
   position: absolute;
   width: 6px;
   height: 100%;
-  background-color: orange;
+  background-color: var(--dec-color);
   top: 0;
   bottom: 0;
   left: 50%;
@@ -869,5 +892,26 @@ overflow-x: hidden;} */
       120vmax 110vmax, 80vmax 80vmax;
     background-position: -50vmax -70vmax, 50vmax -40vmax, 20vmax 30vmax,
       -20vmax -40vmax, 60vmax 60vmax;
+  }
+}
+
+@keyframes welcome-1 {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.8) rotate(-90deg) translateY(-300%);
+  }
+}
+
+@keyframes welcome-2 {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.2) translate(10%, 10%);
+    opacity: 1;
   }
 }
