--- a/src/App.css
+++ b/src/App.css
@@ -495,6 +495,7 @@ html {
 }
 
 .single-experience .content {
+  position: relative;
   width: 50%;
   height: fit-content;
   background: rgba(255, 255, 255, 0.5);
@@ -504,8 +505,25 @@ html {
   -webkit-backdrop-filter: blur(10px);
   transition: all 1s;
 }
+.single-experience .content .back {
+  position: absolute;
+  width:100%;
+  height:100%;
+   border-radius: 10px;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
+  opacity: 0;
+  transform: translate(0%, 100%);
+}
+
 .left.single-experience .content:hover {
   transform: translateX(-10%);
+}
+.single-experience .content:hover .back{
+    transition: 1s;
+    transform: translate(0%,0%);
+    opacity: 1;
 }
 
 .single-experience .content .experience-time {
@@ -515,6 +533,12 @@ html {
 .single-experience .content .experience-title {
   font-size: 1.2rem;
   font-weight: 900;
+}
+.single-experience .content .experience-keywords{
+  font-weight: 500;
+}
+.single-experience .content .experience-image{
+  margin:auto;
 }
 
 .right.single-experience .content {
